--- a/index.html
+++ b/index.html
@@ -1,2 +1,12 @@
-<h1>Hello World</h1>
-
+<!-- index.html -->
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+  <meta charset="UTF-8">
+  <title>DealHunter - お得な情報まとめ</title>
+</head>
+<body>
+  <h1>DealHunterへようこそ！</h1>
+  <p>ここでは現在進行中のお得なセール情報をまとめています。</p>
+</body>
+</html>
