--- a/index.html
+++ b/index.html
@@ -8,5 +8,18 @@
 <body>
   <h1>DealHunterへようこそ！</h1>
   <p>ここでは現在進行中のお得なセール情報をまとめています。</p>
+
+  <h2>おすすめ商品</h2>
+  <ul>
+  <li>
+      <a href="https://amzn.to/42SD4In" target="_blank">
+        excel(エクセル) セラムオイルクレンズ 増量 クレンジングオイル 大容量
+      </a>
+  </li>
+  </ul>
+
 </body>
 </html>
+
+
+
