--- a/recommend.html
+++ b/recommend.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>DealHunter</title>
-
+    <title>DealHunter | おすすめ商品</title>
+    
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" type="image/x-icon" href="assets/favicon.ico">
@@ -30,6 +30,7 @@
     <main class="flex-grow-1">
       <div class="container py-5">
         <h1 class="mb-4">おすすめ商品</h1>
+        <p>本当におすすめしたい商品。</p>
 
         <div class="card mb-3" style="max-width: 540px;">
           <div class="row g-0">
