[Add] Mac mini 2024

--- a/recommend.html
+++ b/recommend.html
@@ -71,6 +71,25 @@
             </div>
           </div>
         </div>
+
+        <div class="card mb-3" style="max-width: 540px;">
+          <div class="row g-0">
+            <div class="col-md-4">
+              <img src="images/recommend/macbook_air.png" class="img-fluid" alt="Mac mini">
+            </div>
+            <div class="col-md-8">
+              <div class="card-body">
+                <h5 class="card-title">Apple 2024 Mac mini</h5>
+                <p class="card-text">
+                  Macbook Airと比較して、モニターがないだけでよりやすく変える。
+                </p>
+                <a href="https://amzn.to/4d2kNx6" class="btn amazon-btn" target="_blank" rel="nofollow">Amazonで見る</a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        
         
       </div>
     </main>
